# rusty-typescript

./: Cargo.toml  package.json
TypeScript-replace/src/compiler/: parser.ts  utilities.ts
proptest-regressions/compiler/: scanner.txt
proptest-regressions/compiler/scanner/test/: mod.txt
src/: lib.rs
src/compiler/: mod.rs  performance.rs  scanner.rs  sys.rs  utilities.rs
src/compiler/parser/: mod.rs
src/compiler/scanner/: mod.rs
src/compiler/scanner/test/: mod.rs
src/compiler/semver/: mod.rs
src/compiler/types/: character_codes.rs  diagnostic.rs  diagnosticMessages.json  diagnostics.rs  diagnostics_message.rs  mod.rs  modifier_flags.rs  node.rs  node_flags.rs  pseudobigint.rs  syntax_kind.rs  text_range.rs  textspan.rs  token_flags.rs  user_preferences.rs
src/compiler/types/syntax_kind/: js_doc.rs  jsx_token.rs  keyword.rs  mod.rs  token.rs
src/types/: mod.rs  node.rs  node_array.rs  text_range.rs
