[package]
name = "rusty-typescript"
version = "0.1.0"
authors = ["Ya'ar Hever <yaarhever@gmail.com>"]
edition = "2018"
description = "A TypeScript compiler written in Rust"
license = "LICENSE"
repository = "https://github.com/yever/rusty-typescript"

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
num-bigint = "0.2"
# Used for error handling
snafu = "0.4.1"
bitflags = "1"
serde={ version = "1", features = ["derive"] }
serde_json="1"
lazy_static="1"
regex = "1"
proptest-derive = "0.1.0"
semver="0.9.0"

[features]
wasm = []

[dev-dependencies]
wasm-bindgen-test = "0.2.44"

# Don't run proptest in webassembly
[target.'cfg(not(feature = "wasm"))'.dev-dependencies]
proptest = "0.9"

[target.'cfg(feature = "wasm")'.dependencies]
wasm-bindgen = "0.2.44"
js-sys = "0.3"
serde-wasm-bindgen = "0.1.3"

[lib]
crate-type = ["cdylib"]
